fix some issues with the z-index and styles

--- a/flow-graph/flow-graph.css
+++ b/flow-graph/flow-graph.css
@@ -60,6 +60,8 @@ canvas, .editBox, .node, .node>div, .selectBox{
 	
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
+
+	z-index: 1000;
 }
 ul{
 	list-style-type:none;
